# Digio

./: main.py  pyproject.toml
digio/models/: auth_models.py  config_models.py  db_base_ops.py  db_engine.py  db_schemas.py
digio/utils/: utils.py
digio/web_services/: digio_routers.py  idcard_cord.json  idcard_routers.py  web_server.py
implementation/demo/: configs.toml  demo.sqlite  digio.sqlite
