[tool.poetry]
name = "digio"
version = "0.1.0"
description = ""
authors = ["Ezhilarasan <ezhil@tocode.tech>"]
readme = "README.md"
packages = [{include = "integration_framework"}]

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = {extras = ["all"], version = "^0.109.2"}
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlmodel = "^0.0.16"
ipython = "^8.22.2"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
httpx = "^0.27.0"
ldap3 = "^2.9.1"
pytest = "^8.3.2"
xmltodict = "^0.13.0"
zeep = "^4.2.1"
loguru = "^0.7.2"



[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[tool.poetry.scripts]
lint = "ruff check . --fix"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
